<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:layout_marginStart="20dp"
    android:background="@drawable/green_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hint"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:shadowColor="@color/yelloo"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="20"
            android:text="@string/roulette"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:text="@string/info_roulette_1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:text="@string/info_roulette_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/esf" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="5dp"
                android:text="@string/info_roulette_3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <Button
            android:id="@+id/alertbox_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/green_radius"
            android:text="@string/okay"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</ScrollView>